check_PROGRAMS = jemalloc_nodump_allocator_test

jemalloc_nodump_allocator_test_SOURCES = JemallocNodumpAllocatorTest.cpp

jemalloc_nodump_allocator_test_CPPFLAGS = -I$(top_srcdir)/.. -I$(top_srcdir)/lib/gtest/include
jemalloc_nodump_allocator_test_LDADD = $(top_builddir)/lib/libmcrouter.a $(top_builddir)/lib/libgtestmain.la
